--- a/examples/twitter-home/index.html
+++ b/examples/twitter-home/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header id="main-header">
+        <nav>
+            <ul>
+                <li> <img src="./images/house.svg" alt="Home"> Home</li>
+                <li> <img src="./images/notification.png" alt="Notification"> Notifications</li>
+                <li> <img src="./images/message.png" alt="Message"> Messages</li>
+            </ul>
+        </nav>
+        <img src="./images/twitter-logo.svg" alt="Logo Twitter">
+        <div class="side">
+            <input type="text" placeholder="Search on Twitter">
+            <img src="./images/avatar.png" alt="User Photo">
+            <button>Tweet</button>
+        </div>
+    </header>
     
 </body>
 </html>
