--- a/examples/twitter-home/index.html
+++ b/examples/twitter-home/index.html
@@ -24,6 +24,9 @@
             <button>Tweet</button>
         </div>
     </header>
+    <div class="banner">
+        <h1>Twitter template example</h1>
+    </div>
     
 </body>
 </html>
