--- a/examples/twitter-home/index.html
+++ b/examples/twitter-home/index.html
@@ -10,22 +10,66 @@
 </head>
 <body>
     <header id="main-header">
-        <nav>
-            <ul>
-                <li> <img src="./images/house.svg" alt="Home"> Home</li>
-                <li> <img src="./images/notification.png" alt="Notification"> Notifications</li>
-                <li> <img src="./images/message.png" alt="Message"> Messages</li>
-            </ul>
-        </nav>
-        <img src="./images/twitter-logo.svg" alt="Logo Twitter">
-        <div class="side">
-            <input type="text" placeholder="Search on Twitter">
-            <img src="./images/avatar.png" alt="User Photo">
-            <button>Tweet</button>
+        <div class="content">
+            <nav>
+                <ul>
+                    <li> <img src="./images/house.svg" alt="Home"> Home</li>
+                    <li> <img src="./images/notification.png" alt="Notification"> Notifications</li>
+                    <li> <img src="./images/message.png" alt="Message"> Messages</li>
+                </ul>
+            </nav>
+            <img src="./images/twitter-logo.svg" alt="Logo Twitter">
+            <div class="side">
+                <input type="text" placeholder="Search on Twitter">
+                <img src="./images/avatar.png" alt="User Photo">
+                <button>Tweet</button>
+            </div>
         </div>
     </header>
+
     <div class="banner">
         <h1>Twitter template example</h1>
+    </div>
+
+    <div class="data-bar">
+        <div class="content">
+            <ul>
+                <li class="active">
+                    <span>Tweets</span>
+                    <strong>2564</strong>
+                </li>
+
+                <li>
+                    <span>Followings</span>
+                    <strong>134</strong>
+                </li>
+
+                <li>
+                    <span>Followers</span>
+                    <strong>1352</strong>
+                </li>
+
+                <li>
+                    <span>Favorites</span>
+                    <strong>85</strong>
+                </li>
+
+                <li>
+                    <span>Lists</span>
+                    <strong>3</strong>
+                </li>
+
+                <li>
+                    <span>Moments</span>
+                    <strong>0</strong>
+                </li>
+            </ul>
+        
+            <div class="left-actions">
+                <button>Follow</button>
+                <img src="/examples/twitter-home/images/more.svg" alt="More">
+            </div>
+        </div>
     </div>
     
 </body>
