--- a/examples/twitter-home/index.html
+++ b/examples/twitter-home/index.html
@@ -71,6 +71,58 @@
             </div>
         </div>
     </div>
+
+    <div class="wrapper-content content">
+
+        <aside class="profile">
+            <img class="avatar" src="/examples/twitter-home/images/avatar.png" alt="User">
+            <h1>User Name</h1>
+            <span>@user123</span>
+            <p>A robot used for demonstrate this example.</p>
+
+            <ul class="user-info">
+                <li><img src="/examples/twitter-home/images/place.svg" alt="Place">São Paulo, Brasil</li>
+                <li><img src="/examples/twitter-home/images/url.svg" alt="URL">srbj.info</li>
+                <li><img src="/examples/twitter-home/images/joined.svg" alt="Joined">Joined June 2019</li>
+                <li><img src="/examples/twitter-home/images/born.svg" alt="Born">Born the 20th of October 1993</li>
+            </ul>
+
+            <div class="widget followers">
+                <strong><img src="/examples/twitter-home/images/followers.svg" alt="Followers">73 followers that you know</strong>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <div class="widget images">
+                <strong><img src="/examples/twitter-home/images/images.svg" alt="Images">266 Photos and videos</strong>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </aside>
+
+        <section class="timeline">
+            timeline
+        </section>
+        <aside class="widgets">
+            widgets
+        </aside>
+    </div>
     
 </body>
 </html>
